apps/gke-gustavo/kafdrop/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dp-kafdrop
  labels:
    app: kafdrop
spec:
  selector:
    matchLabels:
      app: kafdrop
  template:
    metadata:
      labels:
        app: kafdrop
    spec:
      containers:
      - name: kafdrop
        image: obsidiandynamics/kafdrop:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m" 
        ports:
          - containerPort: 9000
            name: http
